# t1-micro58ae

./: .gitignore  Makefile  cuda_benchmark_suites.sh  emulator.sh  flake.nix  readme.typ  reproducer.sh  rtl.sh  run_cuda.sh  run_emulator.sh  run_k1.sh  run_sve.sh  rvv_benchmark_suites.sh  sve_benchmark_suites.sh
cuda_benchmark_suites/sources/: .clangd  .gitignore  CMakeLists.txt  README.md  flake.nix
cuda_benchmark_suites/sources/mmm/: CMakeLists.txt  bench.cu  example.cu  mmm.cu  mmm.cuh
cuda_benchmark_suites/sources/nix/: nvbench.nix  nvbench.patch  overlay.nix
cuda_benchmark_suites/sources/ntt/: CMakeLists.txt  bench.cu  example.cu  ntt.cu  ntt.cuh  ref.wls
cuda_benchmark_suites/sources/utils/: CMakeLists.txt
nix/: buddy-llvm.nix  buddy-mlir.nix  overlay.nix
rtls/benchmark_dlen1024_vlen1024_fp/: Abs32.sv  Arbiter1_SlotRequestToVFU.sv  Arbiter1_VRFReadRequest.sv  Arbiter4_SlotRequestToVFU.sv  BitLevelMaskWrite.sv  ChainingCheck.sv  CompareRecFN.sv  CrossReadUnit.sv  Distributor.sv  LSU.sv  Lane.sv  LaneExecutionBridge.sv  LaneExecutionBridge_1.sv  LaneExecutionBridge_2.sv  LaneExecutionBridge_3.sv  LaneStage0.sv  LaneStage0_1.sv  LaneStage1.sv  LaneStage1_1.sv  LaneStage2.sv  LaneStage2_1.sv  LaneStage3.sv  LaneStage3_1.sv  MaskExchangeUnit.sv  MaskExtend.sv  MaskReduce.sv  MaskUnit.sv  MaskUnitReadCrossBar.sv  OtherUnit.sv  (+11 more)
rvv_benchmark_suites/: builder.nix  default.nix
sim_result/: 3090_exec_stdout.txt  5090_exec_stdout.txt  crypto.txt  dlen_cmp.txt  k1_exec_stdout.txt  kp920_cmp.txt  kp920_exec_stdout.txt  mem_scale.txt  no_chaining.txt  x60_cmp.txt
(+766 files in other folders)
